--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -25,22 +25,22 @@ td,th {border:1px solid #009;padding:.25em .5em}
 <body>
 <table cellspacing="0" cellpadding="0" class="testOverview">
 <tr><th>Test</th><th>Methods<br/>Passed</th><th>Scenarios<br/>Passed</th><th># skipped</th><th># failed</th><th>Total<br/>Time</th><th>Included<br/>Groups</th><th>Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em"><a href="#t1">Blaze test</a></td><td class="numi">1</td><td class="numi">1</td><td class="numi">0</td><td class="numi">0</td><td class="numi">8.1 seconds</td><td class="numi"></td><td class="numi"></td></tr>
-<tr class="stripe"><td style="text-align:left;padding-right:2em"><a href="#t2">Bank Test</a></td><td class="numi">1</td><td class="numi">1</td><td class="numi">0</td><td class="numi">0</td><td class="numi">2.0 seconds</td><td class="numi"></td><td class="numi"></td></tr>
-<tr class="total"><td>Total</td>
-<td class="numi">2</td><td class="numi">2</td><td class="numi">0</td><td class="numi">0</td><td class="numi">10.2 seconds</td><td colspan="2">&nbsp;</td></tr>
+<tr><td style="text-align:left;padding-right:2em"><a href="#t1">Etsy Test</a></td><td class="numi">1</td><td class="numi">1</td><td class="numi">0</td><td class="numi">0</td><td class="numi">6.3 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="methodOverview" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
-<tr id="t1"><th colspan="5">Blaze test &#8212; passed</th></tr>
-<tr class="passedodd"><td>com.test.blaze.tests.CartTest</td><td><a href="#m1"><b>cartPage</b>  </a></td><td class="numi">1</td><td>1686499314288</td><td class="numi">5289</td></tr>
-<tr id="t2"><th colspan="5">Bank Test &#8212; passed</th></tr>
-<tr class="passedodd"><td>com.test.bank.tests.BankLoginTest</td><td><a href="#m2"><b>validateloginPageComponents</b>  </a></td><td class="numi">1</td><td>1686499319716</td><td class="numi">2038</td></tr>
+<tr id="t1"><th colspan="5">Etsy Test &#8212; passed</th></tr>
+<tr class="passedodd"><td>com.test.etsy.tests.EtsySearchTest</td><td><a href="#m1"><b>validateSearchBarFunctionality</b>  </a></td><td class="numi">1</td><td>1686943262074</td><td class="numi">1972</td></tr>
 </table>
-<h1>Blaze test</h1>
-<h2 id="m1">com.test.blaze.tests.CartTest:cartPage</h2>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h1>Bank Test</h1>
-<h2 id="m2">com.test.bank.tests.BankLoginTest:validateloginPageComponents</h2>
+<h1>Etsy Test</h1>
+<h2 id="m1">com.test.etsy.tests.EtsySearchTest:validateSearchBarFunctionality</h2>
+<table cellspacing="0" cellpadding="0" class="result">
+<tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th></tr>
+<tr class="param stripe"><td>iphone 12 case</td>
+<td>iphone</td>
+<td>13</td>
+<td>case</td>
+</tr>
+</table>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
